--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.neu.madcourse.numad21fa_sihengwei">
+    package="edu.neu.madcourse.numad21fa_sihengwei" >
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher_sw"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_sw_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NUMAD21FaSihengWei"
-        android:fullBackupContent="true">
+        android:theme="@style/Theme.NUMAD21FaSihengWei" >
+        <activity
+            android:name=".ClickyClickyActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
