--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.neu.madcourse.numad21fa_sihengwei" >
+    package="edu.neu.madcourse.numad21fa_sihengwei">
+
+    <!-- To request foreground location access, declare one of these permissions. -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_sw_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NUMAD21FaSihengWei" >
+        android:theme="@style/Theme.NUMAD21FaSihengWei">
+
+        <activity
+            android:name=".LocatorActivity"
+            android:exported="true" />
         <activity
             android:name=".RecyclerViewActivity"
             android:exported="true" />
@@ -18,7 +26,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
